--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,8 @@
     "minimum-stability": "stable",
     "require": {
         "akeneo/pim-community-dev": "~1.6.0",
-        "akeneo-labs/custom-entity-bundle": "1.8.*"
+        "akeneo-labs/custom-entity-bundle": "1.8.*",
+        "akeneo/extended-measure-bundle": "dev-master"
     },
     "require-dev": {
         "phpspec/phpspec": "3.0.0",
