--- a/composer.json
+++ b/composer.json
@@ -17,11 +17,10 @@
             "branch": "master"
         }
     ],
-    "minimum-stability": "stable",
     "require": {
         "akeneo/pim-community-dev": "~1.6.0",
         "akeneo-labs/custom-entity-bundle": "1.8.*",
-        "akeneo/extended-measure-bundle": "dev-master"
+        "akeneo/extended-measure-bundle": "dev-master@dev"
     },
     "require-dev": {
         "phpspec/phpspec": "3.0.0",
