--- a/src/Resources/config/measure/image_sensor.yml
+++ b/src/Resources/config/measure/image_sensor.yml
@@ -1,13 +1,19 @@
 measures_config:
     ImageSensor:
+        standard: CCD
         units:
             CCD:
                 symbol: 'CCD'
+                convert: [{'mul': 1}]
             CMOS:
                 symbol: 'CMOS'
+                convert: [{'mul': 1}]
             MOS:
                 symbol: 'MOS'
+                convert: [{'mul': 1}]
             KPIX:
                 symbol: 'Kpix'
+                convert: [{'mul': 1}]
             MPIX:
                 symbol: 'Mpix'
+                convert: [{'mul': 1}]
