--- a/src/Resources/config/measure/sound_pressure.yml
+++ b/src/Resources/config/measure/sound_pressure.yml
@@ -1,12 +1,16 @@
 measures_config:
     SoundPressure:
+        standard: DB_PER_WATT
         units:
             DB_PER_MILLIWATT:
                 symbol: 'dB/mW'
                 name: 'Decibel per milliwatt'
+                convert: [{'mul': 1}]
             DB_PER_WATT:
                 symbol: 'dB/W'
                 name: 'Decibel per watt'
+                convert: [{'mul': 1}]
             MILLIVOLT_PER_PASCAL:
                 symbol: 'mV/Pa'
                 name: 'millivolt per pascal'
+                convert: [{'mul': 1}]
