Add Brand entity

--- a/src/Resources/config/datagrid/brand.yml
+++ b/src/Resources/config/datagrid/brand.yml
@@ -11,6 +11,8 @@ datagrid:
                 label: code
             label:
                 label: label
+            logo_url:
+                label: url_logo
         filters:
             columns:
                 code:
