--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,7 @@
     ],
     "require": {
         "akeneo/pim-community-dev": "~1.6.0",
-        "akeneo-labs/custom-entity-bundle": "1.9.0-RC1",
+        "akeneo-labs/custom-entity-bundle": "1.9.0-RC1@dev",
         "akeneo/extended-measure-bundle": "dev-master@dev",
         "akeneo/extended-attribute-type": "dev-master@dev"
     },
