--- a/src/Resources/config/datagrid/brand.yml
+++ b/src/Resources/config/datagrid/brand.yml
@@ -7,12 +7,18 @@ datagrid:
             entity: Pim\Bundle\CnetConnectorBundle\Entity\Brand
             repository_method: createDatagridQueryBuilder
         columns:
+            logo:
+                label: logo
+                type: twig
+                template: PimCnetConnectorBundle:Property:image.html.twig
+                frontend_type: html
+                data_name: logo_url
             code:
                 label: code
             label:
                 label: label
             logo_url:
-                label: url_logo
+                label: logo_url
             created:
                 label: Created
                 type: product_value_datetime
@@ -53,3 +59,33 @@ datagrid:
                     data_name: rd.udapted
             default:
                 code: '%oro_datagrid.extension.orm_sorter.class%::DIRECTION_ASC'
+        properties:
+            id: ~
+            edit_link:
+                type: url
+                route: pim_customentity_edit
+                acl_resource: pim_cnet_enrich_brand_edit
+                params:
+                    - id
+                    - customEntityName
+            delete_link:
+                type: url
+                route: pim_customentity_delete
+                acl_resource: pim_cnet_enrich_brand_delete
+                params:
+                    - id
+                    - customEntityName
+        actions:
+            edit:
+                type:      navigate
+                label:     brand.edit
+                acl_resource: pim_cnet_enrich_brand_edit
+                icon:      edit
+                link:      edit_link
+                rowAction: true
+            delete:
+                type:  delete
+                label: brand.delete
+                acl_resource: pim_cnet_enrich_brand_delete
+                icon:  trash
+                link:  delete_link
