--- a/docs/example/Acme/Bundle/AppBundle/Resources/config/model/doctrine/ProductValue.orm.yml
+++ b/docs/example/Acme/Bundle/AppBundle/Resources/config/model/doctrine/ProductValue.orm.yml
@@ -14,6 +14,11 @@ Acme\Bundle\AppBundle\Model\ProductValue:
         integer_idx:
             columns:
                 - value_integer
+    fields:
+        textCollection:
+            type: json_array
+            nullable: true
+            column: value_text_collection
     manyToOne:
         brand:
             targetEntity: Pim\Bundle\CnetConnectorBundle\Entity\Brand
