--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,7 @@
     ],
     "require": {
         "akeneo/pim-community-dev": "~1.6.0",
-        "akeneo-labs/custom-entity-bundle": "dev-master@dev",
+        "akeneo-labs/custom-entity-bundle": "1.9.*",
         "akeneo/extended-attribute-type": "dev-master@dev"
     },
     "require-dev": {
