--- a/docs/example/Acme/Bundle/AppBundle/Resources/config/model/doctrine/ProductValue.mongodb.yml
+++ b/docs/example/Acme/Bundle/AppBundle/Resources/config/model/doctrine/ProductValue.mongodb.yml
@@ -2,6 +2,7 @@ Acme\Bundle\AppBundle\Model\ProductValue:
     type: embeddedDocument
     fields:
         brand:
-            embedded: true
             type: entity
             targetEntity: Pim\Bundle\CnetConnectorBundle\Entity\Brand
+        textCollection:
+            type: raw
