--- a/src/Resources/config/custom_entities.yml
+++ b/src/Resources/config/custom_entities.yml
@@ -1,15 +1,5 @@
 custom_entities:
     brand:
         entity_class: Pim\Bundle\CnetConnectorBundle\Entity\Brand
-        actions:
-            index:
-                acl: pim_cnet_enrich_brand_index
-                service: pim_custom_entity.action.index
-            edit:
-                acl: pim_cnet_enrich_brand_edit
-                form_type: pim_cnet_enrich_brand
-            create:
-                acl: pim_cnet_enrich_brand_create
-                form_type: pim_cnet_enrich_brand
-            delete:
-                acl: pim_cnet_enrich_brand_delete
+        options:
+            edit_form_extension: pim-brand-edit-form
