--- a/src/Resources/config/datagrid/brand.yml
+++ b/src/Resources/config/datagrid/brand.yml
@@ -2,75 +2,30 @@ datagrid:
     brand:
         options:
             entityHint: brand
+            manageFilters: false
         source:
             type: pim_datasource_default
             entity: Pim\Bundle\CnetConnectorBundle\Entity\Brand
             repository_method: createDatagridQueryBuilder
         columns:
-            logo:
-                label: logo
-                type: twig
-                template: PimCnetConnectorBundle:Property:image.html.twig
-                frontend_type: html
-                data_name: logo_url
             code:
-                label: code
+                label: Code
             label:
-                label: label
+                label: Label
             logo_url:
-                label: logo_url
-            created:
-                label: Created
-                type: product_value_datetime
-                frontend_type: datetime
-            updated:
-                label: Updated
-                type: product_value_datetime
-                frontend_type: datetime
-        filters:
-            columns:
-                code:
-                    type: string
-                    label: Code
-                    data_name: rd.code
-                label:
-                    type: string
-                    label: Label
-                    data_name: rd.label
-                created:
-                    type:             date
-                    label:            Created
-                    data_name:        rd.created
-                    filter_by_having: true
-                updated:
-                    type:             date
-                    label:            Updated
-                    data_name:        rd.udapted
-                    filter_by_having: true
-        sorters:
-            columns:
-                code:
-                    data_name: rd.code
-                label:
-                    data_name: rd.label
-                created:
-                    data_name: rd.created
-                updated:
-                    data_name: rd.udapted
-            default:
-                code: '%oro_datagrid.extension.orm_sorter.class%::DIRECTION_ASC'
+                label: Logo Url
         properties:
             id: ~
             edit_link:
                 type: url
-                route: pim_customentity_edit
+                route: pim_customentity_rest_get
                 acl_resource: pim_cnet_enrich_brand_edit
                 params:
                     - id
                     - customEntityName
             delete_link:
                 type: url
-                route: pim_customentity_delete
+                route: pim_customentity_rest_delete
                 acl_resource: pim_cnet_enrich_brand_delete
                 params:
                     - id
@@ -78,14 +33,70 @@ datagrid:
         actions:
             edit:
                 type:      navigate
-                label:     brand.edit
                 acl_resource: pim_cnet_enrich_brand_edit
+                label:     brand.edit
                 icon:      edit
                 link:      edit_link
                 rowAction: true
             delete:
                 type:  delete
-                label: brand.delete
                 acl_resource: pim_cnet_enrich_brand_delete
+                label: brand.delete
                 icon:  trash
                 link:  delete_link
+        filters:
+            columns:
+                code:
+                    type:      string
+                    label:     Code
+                    data_name: rd.code
+                label:
+                    type:  search
+                    label: Label
+                    data_name: rd.label
+                logo_url:
+                    type: string
+                    label: Logo URL
+                    data_name: rd.logoUrl
+
+        sorters:
+            columns:
+                code:
+                    data_name: rd.code
+                label:
+                    data_name: rd.label
+                logo_url:
+                    data_name: rd.logoUrl
+            default:
+                code: '%oro_datagrid.extension.orm_sorter.class%::DIRECTION_ASC'
+
+        mass_actions:
+            delete:
+                type: delete
+                label: pim.grid.mass_action.delete
+                entity_name: brand
+                acl_resource: pim_cnet_enrich_brand_delete
+                handler: mass_delete
+                className: 'AknButton AknButton--important AknButtonList-item'
+                messages:
+                    confirm_title: pim_datagrid.mass_action.delete.confirm_title
+                    confirm_content: pim_cnet.mass_action.delete.confirm_content
+                    confirm_ok: pim_cnet.mass_action.brand.delete.confirm_ok
+                    success: pim_datagrid.mass_action.brand.delete.success
+                    error: pim_datagrid.mass_action.barnd.delete.error
+                    empty_selection: pim_datagrid.mass_action.delete.empty_selection
+
+            quick_export_csv:
+                type: export
+                label: pim.grid.mass_action.quick_export.csv_all
+                className:  'AknButton AknButton--action AknButtonList-item'
+                handler: custom_quick_export
+                route: pim_customentity_quickexport
+                route_parameters:
+                    customEntityName: brand
+                    _format: csv
+                    _contentType: text/csv
+                context:
+                    withHeader: true
+                messages:
+                    empty_selection: pim_datagrid.mass_action.delete.empty_selection
