--- a/composer.json
+++ b/composer.json
@@ -40,8 +40,8 @@
     "extra": {
         "branch-alias": {
             "dev-master": "2.0.x-dev",
-            "1.1": "1.1.x-dev",
-            "1.0": "1.0.x-dev"
+            "dev-1.1": "1.1.x-dev",
+            "dev-1.0": "1.0.x-dev"
         }
     }
 }
