--- a/composer.json
+++ b/composer.json
@@ -23,14 +23,8 @@
         "akeneo/extended-attribute-type": "2.0.*"
     },
     "require-dev": {
-        "phpspec/phpspec": "3.0.0",
-        "squizlabs/php_codesniffer": "2.3.*",
-        "phpmd/phpmd": "2.3.*",
-        "friendsofphp/php-cs-fixer": "@stable",
-        "henrikbjorn/phpspec-code-coverage": "3.0.1"
-    },
-    "config": {
-        "bin-dir": "bin"
+        "phpspec/phpspec": "^3.0.0",
+        "friendsofphp/php-cs-fixer": "@stable"
     },
     "autoload": {
         "psr-4": {
